fix the alignment of bootstrap cols

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,10 @@
 html, body {
-    height: 100%
+    height: 100%;
+    width: 100%;
 }
 
-.container {
-  min-height: 100%;
+.container-fluid {
+  size: 100% 100%;
   overflow: hidden;
 }
 
@@ -81,6 +82,7 @@ html, body {
   background: grey;
 }
 
-.sizeChoice input {
-
+.choosingSize {
+  float: right;
+  background-color: cyan;
 }
